# vc-audit

./: .gitignore  README.md  run.ps1  run.sh  setup.ps1  setup.sh
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260116_0001_initial_schema.py  20260116_0002_seed_portfolio_companies.py  20260122_0003_add_data_sources.py  20260122_0004_seed_from_json.py
backend/data/companies/: basis_ai.json  growthco.json  old_round.json  prerevenue_no_round.json  techstart.json
backend/data/comparables/: fintech.json  saas.json
backend/data/market/: indices.json
backend/src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  models.py
backend/src/api/: __init__.py  routes.py  schemas.py
backend/src/data/: __init__.py  loader.py
backend/src/database/: __init__.py  crud.py  database.py  loader.py
backend/src/database/models/: __init__.py  base.py  comparable_company.py  market_index.py  portfolio_company.py  sector.py  valuation.py
backend/src/engine/: __init__.py  engine.py
backend/src/methods/: __init__.py  base.py  comps.py  last_round.py
backend/src/middleware/: logging_middleware.py  rate_limit.py
backend/src/services/: portfolio_companies.py  valuations.py
backend/src/utils/: __init__.py  math_utils.py  retry.py  serialization.py
backend/src/valuation/: __init__.py  base.py  comps.py  engine.py  last_round.py
backend/tests/: __init__.py  conftest.py  test_crud.py  test_engine.py  test_rate_limit.py  test_retry.py  test_serialization.py  test_validation.py
(+50 files in other folders)
